--- a/_includes/head.html
+++ b/_includes/head.html
@@ -13,6 +13,7 @@
   <link href="https://fonts.googleapis.com/css?family=Roboto:400,700" rel="stylesheet">
   <!-- Ionicons -->
   <link href="https://unpkg.com/ionicons@4.2.2/dist/css/ionicons.min.css" rel="stylesheet">
+  <script defer src="https://friconix.com/cdn/friconix.js"></script>
 
   <style>
   {% capture include_to_scssify %}
