--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -11,16 +11,16 @@ layout: default
 
         <h1 class="post-title">{{ page.title | escape }}</h1>
 
-        <div class="post__info">
-          <div class="post__author">
+        <div>
+          <div>
             <span>By</span>
             <a href="{{ site.baseurl }}/about/" class="author-name">{{site.data.settings.author.name}}</a>
           </div>
 
           {% if page.tags.size >= 1 %}
-          <div class="post__tags">
+          <div>
             {% for tag in page.tags %}
-              <a href="{{ site.baseurl }}/tag/{{ tag|downcase }}" class="post__tags-tag">{{ tag }}</a>
+              <a href="{{ site.baseurl }}/tag/{{ tag|downcase }}" class="post-tag"><i class="fi-xwluxl-label-wide"></i>{{ tag }}</a>
             {% endfor %}
           </div>
           {% endif %}
