--- a/_sass/4-layouts/_post.scss
+++ b/_sass/4-layouts/_post.scss
@@ -4,7 +4,7 @@
 
   .post-title {
     margin-bottom: 10px;
-    width: 500px;
+    width: 800px;
     max-width: 100%;
     font-size: 57px;
     line-height: 70px;
@@ -231,4 +231,24 @@
   @media only screen and (max-width: $mobile) {
     margin-bottom: 40px;
   }
+}
+
+.post-tag{
+    color: $link-color;
+    font-size: 12px;
+    letter-spacing: 0.5px;
+    font-weight: 700;
+    text-transform: uppercase;
+    border: 1px solid $link-color;
+    padding: 4px 4px 4px 4px;
+    border-radius: 4px;
+    margin-right: 5px;
+    margin-bottom: 4px;
+    background-color: white;
+    cursor: pointer;
+}
+
+.post-tag:hover {
+  color: white;
+  background-color: $link-color;
 }
